# hip

./: .gitignore  README  README.md  README.org  autospec.cabal  consistencies  consistency  hip.cabal  latex  prover9script  runqsub
docs/: Hipspec.org  InductionATPs.org  Plan.org  Proposal.org  Skolemization.org  Translation.tex  Zeno.org  function.tex  hcar  links  scratch
examples/: AutoPrelude.hs  Bool.hs  EnvMonad.hs  Expr.hs  FV.hs  Fix.hs  Functions.hs  HipPrelude.hs  IWC.hs  Infinite.hs  Integers.hs  ListFunctions.hs  Lists.hs  MapIterate.hs  MaybeMonad.hs  Mini.hs  Nat.hs  Nat2ndArg.hs  NatAcc.hs  NatDouble.hs  NatDoubleStupid.hs  NatSwap.hs  Ordinals.hs  ProductiveUseOfFailure.hs  Sequences.hs  State.hs  StateMonad.hs  Streams.hs
examples-ec/: Listfun.hs  functions.ec  head.ec  listfun.ec  nat.ec  qsort.ec  scoping.ec  sorting.ec
examples-hs/: Alarming.hs  DataList.hs  Lambda.hs  Let.hs  LetLambdaBug.hs  MapIterate.hs  PatternMatching.hs  Preluded.hs  Sections.hs  StateBug.hs  Where.hs
examples/Util/: QCProps.hs
examples/expr/: Mirror.hs  Tree.hs
examples/isabelle/: BinaryTrees.thy  Lists.thy  NaturalNumbers.thy
examples/iwc/: 002EvenLengthAppend.hs  005BinomialTheorems.hs  006EvenEquivalent.hs  FV.hs  README
examples/numeric/: Integers.hs
examples/quickspec/: Bool.hs  ListFunctions.hs  Nat.hs  Queue.hs
examples/sorting/: MergeSort.hs
examples/zeno/: Comparison.hs  ZenoNat.hs  ZenoNoTC.hs  proveall
experiments/: Confs.hs  Mini.hs  Trees.hs
finalpresentation/: MapIterate.hs  presentation.tex
presentation/: presentation.org
report/: Cover_page_GU.odt  Makefile  abstract.tex  apalikeurl.bst  approx.tex  boolboolcpo.tex  boolcpo.tex  builder  compile  conclusion.tex  domaintheory.tex  equality.tex  fixpoint.tex  future.tex  incscript  induction.tex  intro.tex  logic.tex  masterbib.bib  natcpo.tex  outline.tex  parsetree.sty  proofs.tex  references.bib  related.tex  report.tex  results.tex  tech.tex  testsuite.tex  titlepage.tex  translation.tex  wrapfig.sty
report/examples/: Even.hs  Tree.hs
report/resultdata/: MassageResults.hs  allstats.tex  bigoutput  theoremTimes.data  total-summary.tex  venn.tex
report/results/: allstats.tex  total-summary.tex
results/: Integres.tex  Natres.tex  Results.tex
scratch/: 3dgraph.tex  BezoutBar.hs  InductionPrinciples.agda  ListInduction.agda  QuantifierJuggling.hs  SymmetricInduction.agda  TotalApproximation.hs  WeirdPlus.agda  bzr-eq.tptp  natdomain.dot  venn.tex
scratch/approx-lemma-function/: map-iterate.tptp
scratch/approx-lemma-min/: map-iterate.tptp
scratch/approx-lemma-nats/: map-iterate.tptp  map.ax
scratch/haskell/: Example.hs  (+1 more)
src/: TPTP-test.hs  magic-library-script
test/: Fix.hs  FixpointInduction.hs  InductionPrinciples.agda  Ordinals.agda  Rotate.agda  WeirdPlus.agda
tests/: BoolExpr.hs  BoolExpr2.hs  Patterns.hs
testsuite/: AutoPrelude.hs  BoolExpr.hs  BoolLists.hs  Description.org  EnvMonad.hs  Expr.hs  FV.hs  Fix.hs  Functions.hs  IWC.hs  Infinite.hs  InsertionSort.hs  Integers.hs  ListFunctions.hs  Lists.hs  MaybeMonad.hs  MergeSort.hs  Mini.hs  MonadEnv.hs  MonadMaybe.hs  MonadState.hs  Nat.hs  Nat2ndArg.hs  NatAcc.hs  NatDouble.hs  NatDoubleSlow.hs  NatStrict.hs  NatSwap.hs  NobodyExpectsTheScottInduction.hs  Ordinals.hs  PAP.hs  PatternMatching.hs  PatternMatchingDifferences.hs  Queues.hs  Reverse.hs  SortTest.hs  Sorting.hs  StateMonad.hs  Tricky.hs  ZenoLists.hs
tptp-test/: DepthInduction.hs  MutualFix.hs  SSPlusAssoc.agda  approx_zero_bottom.tptp  map-iterate.tptp  modus-ponens.tptp  nats_lists.ax  peano-typed.tptp  peano-untyped.tptp  peano.tptp  test_lists.tptp
(+267 files in other folders)
