name:               autospec
version:            0.1
license:            BSD3
author:             Dan Rosén
maintainer:         danr@student.gu.se
synopsis:           Prove properties of Haskell functions using ATPs
category:           Proving
stability:          Experimental
cabal-version:      >= 1.6
build-type:         Simple
homepage:           github.com/danr/autospec

executable          autospec
    ghc-options:    -Wall -threaded -O2
    hs-source-dirs: src
    main-is:        Language/HFOL/Translate.hs

    build-depends: base                          >= 4    && < 5
                 , process                       >= 1.0.1.1
                 , uniplate                      >= 1.6
                 , Grempa                        >= 0.2
                 , haskell-src-exts              >= 1.11.1
                 , mtl                           >= 2.0
                 , pretty                        >= 1.0
                 , QuickCheck                    >= 2.0
                 , th-lift                       >= 0.5
                 , fclabels                      >= 1.0
                 , containers                    >= 0.4
                 , cmdargs                       >= 0.9
